force-app/main/default/objects/Tiered_Rebate_Details__c/Tiered_Rebate_Details__c.object-meta.xml
<CustomObject>
    <label>Tiered Rebate Details</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Tiered Rebate Details  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiered Rebate Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>