force-app/main/default/objects/Tiered_Rebate_Details__c/fields/eNett_Contract__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract__c</fullName>
    <label>eNett Contract</label>
    <referenceTo>eNett_Contract__c</referenceTo>
    <relationshipLabel>Tiered Rebate Details</relationshipLabel>
    <relationshipName>Tiered_Rebate_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>