force-app/main/default/objects/Tiered_Rebate_Details__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <formula>If(ISPICKVAL(eNett_Contract__r.Incentive_Type__c,&quot;% of Interchange&quot;),&quot;% of Interchange&quot;,
If(ISPICKVAL(eNett_Contract__r.Incentive_Type__c,&quot;Fixed %&quot;),&quot;Fixed %&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Type</label>
    <type>Text</type>
</CustomField>