force-app/main/default/objects/Tiered_Rebate_Details__c/fields/Tier_Fixed_Share__c.field-meta.xml
<CustomField>
    <fullName>Tier_Fixed_Share__c</fullName>
    <label>Tier Fixed % Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>