force-app/main/default/objects/Tiered_Rebate_Details__c/fields/Tier_Range_To__c.field-meta.xml
<CustomField>
    <fullName>Tier_Range_To__c</fullName>
    <label>Tier Range To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>