force-app/main/default/objects/Tiered_Rebate_Details__c/fields/Tiered_BPS_Share__c.field-meta.xml
<CustomField>
    <fullName>Tiered_BPS_Share__c</fullName>
    <formula>Tier_Fixed_Share__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiered BPS Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>