force-app/main/default/objects/Tiered_Rebate_Details__c/fields/Tiered_Interchange_Share__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Interchange_Share__c</fullName>
    <label>Tiered % Interchange Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>